--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "tailwindcss": "^3.4.13",
         "vite": "^6.0.6",
         "vue": "^3.5.13"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.3"
     }
 }
